# CS236

./: CMakeLists.txt
lab_0/: README.md
lab_0/project-0-main/: Book.cpp  BookCreator.cpp  Library.cpp
proj1/: AddAutomaton.cpp  AddAutomaton.h  CMakeLists.txt  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.h  EndOfFileAutomaton.cpp  EndOfFileAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IdAutomaton.cpp  IdAutomaton.h  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Node.h  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.h  QmarkAutomaton.cpp  QmarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  README.md  Relation.cpp  (+17 more)
proj1/Lab1PassOffCases/1-70/: input0.txt  input00.txt
proj1/Lab1PassOffCases/1-90/: input0.txt
proj1/Lab2PassOffCases/2-80/: input0.txt  inputx.txt
