cmake_minimum_required(VERSION 3.16)
project(proj1)

set(CMAKE_CXX_STANDARD 14)

add_executable(proj1
        main.cpp
        Lexer.cpp
        Token.cpp
        ColonDashAutomaton.cpp
        ColonAutomaton.cpp
        UndefinedAutomaton.cpp
        UndefinedAutomaton.h
        EndOfFileAutomaton.cpp
        EndOfFileAutomaton.h
        CommentAutomaton.cpp
        CommentAutomaton.h
        CommaAutomaton.cpp
        CommaAutomaton.h
        PeriodAutomaton.cpp
        PeriodAutomaton.h
        QmarkAutomaton.cpp
        QmarkAutomaton.h
        LeftParenAutomaton.cpp
        LeftParenAutomaton.h
        RightParenAutomaton.cpp
        RightParenAutomaton.h
        MultiplyAutomaton.cpp
        MultiplyAutomaton.h
        AddAutomaton.cpp
        AddAutomaton.h
        SchemesAutomaton.cpp
        SchemesAutomaton.h
        FactsAutomaton.cpp
        FactsAutomaton.h
        RulesAutomaton.cpp
        RulesAutomaton.h
        QueriesAutomaton.cpp
        QueriesAutomaton.h
        IdAutomaton.cpp
        IdAutomaton.h
        StringAutomaton.cpp
        StringAutomaton.h
        DatalogProgram.h
        Rule.h
        Predicate.h
        Parameter.h
        Parser.cpp
        Parser.h)
